src/objects/Cases_Reply_to_Emails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Reply to Email Addresses for implementing Email to Case functionality through custom class.</description>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Used to store RecordType.DeveloperName.</description>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_to_Email__c</fullName>
        <description>Email address to Reply To.</description>
        <label>Reply to Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Cases - Reply to Emails</label>
</CustomObject>